--- a/clientui/package.json
+++ b/clientui/package.json
@@ -6,18 +6,24 @@
     "@ant-design/icons": "^5.2.6",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.12",
+    "@mui/icons-material": "^5.14.13",
+    "@mui/material": "^5.14.13",
     "@mui/styled-engine-sc": "^5.14.12",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.9.4",
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "react-widgets": "^5.8.4",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
