--- a/clientui/package.json
+++ b/clientui/package.json
@@ -9,12 +9,19 @@
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.13",
     "@mui/styled-engine-sc": "^5.14.12",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.9.4",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.1",
+    "lucide-react": "^0.287.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
@@ -25,6 +32,8 @@
     "react-toastify": "^9.1.3",
     "react-widgets": "^5.8.4",
     "styled-components": "^5.3.11",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
